docs(review): record executed red->green test results in section 5